@@ -613,13 +613,14 @@ class TimelineComposition(TimelineSource):
                 obj.setStartDurationTime(start = (obj.start - source.duration))
 
         # if we have a brother
-        if remove_linked and self.linked and self.linked.gnlobject:
+        if remove_linked and self.linked and source.linked:
             sources = self.linked.sources[0]
-            pos = sources[2].index(source.linked)
-            del sources[2][pos]
-            self.linked.gnlobject.remove(source.linked.gnlobject)
-            self.linked.emit('source-removed', source.linked)
-            self.linked._updateCondensedList()
+            if source.linked in sources[2]: 
+                pos = sources[2].index(source.linked)
+                del sources[2][pos]
+                self.linked.gnlobject.remove(source.linked.gnlobject)
+                self.linked.emit('source-removed', source.linked)
+                self.linked._updateCondensedList()
 
         self.emit('source-removed', source)
         # update the condensed list
